# pe-demo

./: .gitignore  README.md  config.yaml  pyproject.toml
.claude/docs/: documentation-conventions.md
.github/workflows/: deploy-pages.yml  tests.yml
ark/: NOTICE.md  __init__.py  build_html.py  context.py
content/: adult-embedding.md  data-notes.md  engineering-notes.md  experiments.md  faq.md  index.md  method-tabpe.md  results-detail.md
data/bank/: bank_metadata.json  manifest.json
data/credit/: credit_metadata.json  manifest.json
data/drybean/: drybean_metadata.json  manifest.json
docs/: findings.md  reproduction-criteria.md  reproduction-log.md  spec.md
docs/guides/: new-dataset-checklist.md
docs/plans/: experiment-plan.md
docs/research/: adult-embedding.md  official-implementation.md
docs/tasks/: README.md
pe_demo/: __init__.py
pe_demo/embedding/: __init__.py  adult.py
results/summaries/: adult_ceiling.json  adult_embedding_adult_semantic_seed0.json  adult_embedding_adult_semantic_seed1.json  adult_embedding_adult_semantic_seed2.json  adult_embedding_official_seed0.json  adult_embedding_official_seed1.json  adult_embedding_official_seed2.json  adult_embedding_public_fe_seed0.json  adult_embedding_public_fe_seed1.json  adult_embedding_public_fe_seed2.json  adult_embedding_robust_numeric_seed0.json  adult_embedding_robust_numeric_seed1.json  adult_embedding_robust_numeric_seed2.json  adult_embedding_seed_aggregate.csv  adult_embedding_seed_aggregate.json  adult_eps0p5_robust_numeric_seed0.json  adult_eps0p5_seed0.json  adult_eps1p0_robust_numeric_seed0.json  adult_eps1p0_seed0.json  adult_eps2p0_robust_numeric_seed0.json  adult_eps2p0_seed0.json  adult_eps4p0_robust_numeric_seed0.json  adult_eps4p0_seed0.json  adult_eps8p0_robust_numeric_seed0.json  (+42 more)
scripts/: aggregate_seeds.py  audit_results.py  build_html.py  build_site.py  collect_results.py  make_figures.py  run_experiment.py  run_smoke.py
tests/: test_adult_embedding.py  test_report_pipeline.py
(+73 files in other folders)
